# music-analysis-toolkit

./: .env.local.example  .env.prod.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .pre-push  CLAUDE.md  DEVELOPMENT.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  Dockerfile  PHASE_0_COMPLETION.md  PHASE_1_INTEGRATION_GUIDE.md  QUALITY_BASELINE.md  README.md  constants.ts  deploy.sh  docker-compose.yml  docker-entrypoint.sh  help.js  index.html  index.tsx  metadata.json  midi.js  nginx.conf  package-lock.json  package.json  postcss.config.js  readme.md  run_load_test.py  run_profiler.py  setup-dev.sh  tables.js  tailwind.config.js  test_mode_logic.js  test_mode_matching.js  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  test-and-deploy.yml
backend/: .flake8  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py  models.py  utils.py
backend/docs/: openapi.json
backend/tests/: test_onset_weighting.py  test_utils.py
components/: ChordAnalyzer.tsx  LoadingSpinner.tsx  ResultDisplay.tsx  ScaleFinder.tsx  ScaleTable.tsx  TableCellsIcon.tsx  ToggleSwitch.tsx
constants/: scales.ts
dev_docs/: README.md  analysis_results_panel.md  architecture.md  deployment.md  design_requirements.md  design_use_cases.md  implementation.md  logging.md  styling_the_app.md  two_stage_flow_summary.md
docs/: COMPREHENSIVE_ANALYSIS_UI_DESIGN.md  DEPLOYMENT_AND_OPERATIONS.md  DESIGN_AND_REQUIREMENTS.md  DEVELOPMENT_GUIDE.md  HELP_SYSTEM_INTEGRATION_EXAMPLE.md  MUSIC_THEORY_INTEGRATION_ROADMAP.md  README.md  TECHNICAL_ARCHITECTURE.md  UI_CONSOLIDATION_FRAMEWORK.md
docs-archive/: ENHANCED_MODAL_ANALYZER_FLOW.md  IMPLEMENTATION_SUMMARY.md  MODAL_LOGIC_ANALYSIS_SUMMARY.md  MUSIC_THEORY_ARCHITECTURE.md
docs/architecture/: integration-roadmap-comprehensive.md  integration-roadmap.md  modal-analysis.md
docs/design/: comprehensive-analysis-ui.md  contextual-help-system.md  delightful-components.md  ui-consolidation-framework.md
docs/development/: deployment.md  testing.md
docs/implementation/: analysis-hub.md  unified-input-system.md
docs/next-updates/: CONSOLIDATION_ACCEPTANCE_CRITERIA.md  CSS_FIXES_AND_STYLING_GUIDE.md  MIGRATION_AND_DEPLOYMENT_GUIDE.md  MUSIC_SIDEBAR_CONSOLIDATION_ANALYSIS.md  TECHNICAL_IMPLEMENTATION_ROADMAP.md  TECHNICAL_IMPLEMENTATION_ROADMAP_CLEAN.md  TESTING_AND_VALIDATION_STRATEGY.md  TESTING_VALIDATION_STRATEGY_CLEAN.md  UX_UI_ISSUES_AND_FIXES.md
docs/test_evals.csv/: locrian_long_issues.csv
frontend/: .env.prod.example  ANALYSIS_HUB_IMPLEMENTATION.md  COMMIT_MESSAGE.txt  CONTEXTUAL_HELP_DESIGN.md  DELIGHTFUL_INTEGRATION_GUIDE.md  Dockerfile  ELEGANT_CHORD_INPUT_DESIGN.md  ENHANCED_MOUSE_INPUT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  MOUSE_CHORD_INPUT_DESIGN.md  README.md  TestLocatorAnalysisScript.sh  UNIFIED_MUSIC_INPUT_IMPLEMENTATION.md  UNIVERSAL_INPUT_SETTINGS_DESIGN.md  comprehensive-modal-test-cases.json  debug-chord-analysis.js  debug-comprehensive-test.js  debug-functional-analysis.js  debug-modal-confidence.js  eslint.config.js  generate-comprehensive-test-cases.cjs  generate-comprehensive-test-cases_w_long.cjs  generate-exhaustive-dataset.ts  index.html  modal-test-detailed-results.json  modal-validation-dataset.json  package-lock.json  package.json  playwright.config.ts  recorded-test.spec.cjs  storage.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/docs/: CLEANUP_SUMMARY.md  ENHANCED_MODAL_ANALYZER_FLOW.md  EXHAUSTIVE_MODAL_ANALYSIS_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODAL_ANALYSIS_ARCHITECTURE.md  MODAL_LOGIC_ANALYSIS_SUMMARY.md  MODE_LOGIC_FILES.md  MUSIC_THEORY_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  TESTING_GUIDE.md  UI_DESIGN_COMPREHENSIVE_ANALYSIS.md  production-test-strategy.md
frontend/public/: metadata.json
music_modes_app/: background.js  index.html  manifest.json  midi_handler.js  presentation_logic.js  tables.js
server/: index.js
services/: geminiService.ts
src/: App.tsx  main.css  types.ts
tests/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+230 files in other folders)
